HREPTWO-16: some minor improvements
svn path=/hippo-ecm/trunk/; revision=13119